--- a/app/src/main/res/layout/setting_activity.xml
+++ b/app/src/main/res/layout/setting_activity.xml
@@ -28,7 +28,7 @@
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:checked="true"
+            android:checked="false"
             android:gravity="center_vertical"
             android:padding="@dimen/setting_padding"
             android:text="包含子文件夹"
@@ -42,7 +42,7 @@
             android:checked="true"
             android:gravity="center_vertical"
             android:padding="@dimen/setting_padding"
-            android:text="无序播放"
+            android:text="true"
             android:textSize="25sp" />
     </LinearLayout>
 
