--- a/app/src/main/res/layout/setting_activity.xml
+++ b/app/src/main/res/layout/setting_activity.xml
@@ -42,7 +42,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:baselineAligned="false">
 
         <LinearLayout
@@ -133,4 +133,10 @@
         </LinearLayout>
     </LinearLayout>
 
+    <Button
+        android:text="保存"
+        android:id="@+id/btn_save"
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
